--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,7 +8,7 @@
   --background-end-rgb: 255, 255, 255;
 }
 
-:root[data-color-scheme=dark] {
+:root[data-color-scheme="dark"] {
   --foreground-rgb: 255, 255, 255;
   --background-start-rgb: 0, 0, 0;
   --background-end-rgb: 0, 0, 0;
